sorted overflow issue

--- a/src/sass/landing.scss
+++ b/src/sass/landing.scss
@@ -265,6 +265,7 @@ section#first {
     background-color: $accent;
     text-align      : center;
     color           : $whiteFont;
+    overflow-x      : hidden;
     #work {
         padding : 1em 1em 5em;
         position: relative;
@@ -306,39 +307,39 @@ section#first {
             }
         }
         .browser {
-            position: absolute;
-            left    : 0;
-            right   : 0;
-            top     : 12%;
-            margin  : 0 auto;
+            position                 : absolute;
+            left                     : 0;
+            right                    : 0;
+            top                      : 12%;
+            margin                   : 0 auto;
             animation-iteration-count: 1;
-            animation-duration: 0.7s;
+            animation-duration       : 0.7s;
             &.leftPreview {
                 transform: translateX(-100%);
-                opacity: 0;
+                opacity  : 0;
             }
             &.rightPreview {
                 transform: translateX(100%);
-                opacity: 0;
+                opacity  : 0;
             }
             &.current {
                 z-index: 10;
             }
         }
         &.moveright {
-          .browser.leftPreview {
-            animation-name: moveRight;
-          }
+            .browser.leftPreview {
+                animation-name: moveRight;
+            }
         }
         &.moveleft {
-          .browser.rightPreview {
-            animation-name: moveLeft;
-          }
+            .browser.rightPreview {
+                animation-name: moveLeft;
+            }
         }
         &.transition {
-          .browser.current {
-            animation-name: moveDown;
-          }
+            .browser.current {
+                animation-name: moveDown;
+            }
         }
     }
     .infoContainer {
@@ -530,52 +531,52 @@ section#fourth {
     }
 }
 @keyframes moveRight {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  30% {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  75% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
+    0% {
+        transform: translateX(-100%);
+        opacity  : 0;
+    }
+    30% {
+        transform: translateX(-100%);
+        opacity  : 0;
+    }
+    75% {
+        transform: translateX(0);
+        opacity  : 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity  : 1;
+    }
 }
 @keyframes moveLeft {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  30% {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  75% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
+    0% {
+        transform: translateX(100%);
+        opacity  : 0;
+    }
+    30% {
+        transform: translateX(100%);
+        opacity  : 0;
+    }
+    75% {
+        transform: translateX(0);
+        opacity  : 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity  : 1;
+    }
 }
 @keyframes moveDown {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  75% {
-    transform: scale(0.7);
-    opacity: 0;
-  }
-  100% {
-    transform: scale(0.7);
-    opacity: 0;
-  }
+    0% {
+        transform: scale(1);
+        opacity  : 1;
+    }
+    75% {
+        transform: scale(0.7);
+        opacity  : 0;
+    }
+    100% {
+        transform: scale(0.7);
+        opacity  : 0;
+    }
 }
